Fix iOS zoom (viewport), collapse grosone/retning-kort

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,11 @@
   * {
     box-sizing: border-box;
   }
+
+  /* Hindre iOS Safari fra å zoome inn på inputs */
+  input, textarea, select {
+    font-size: 16px !important;
+  }
 }
 
 @layer components {
